--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,252 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+
+.left-navbar {
+  height: 94vh;
+  background-color: #fff;
+  width: 102px;
+  position: absolute;
+  padding: 16px;
+  padding-bottom: 64px;
+  border-radius: 25px;
+  top: 23px;
+  left: 23px;
+  /* overflow-y: scroll; */
+}
+.middle-links {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+.route-links {
+  background-color: #E8F0F5;
+  padding: 10px;
+  border-radius: 50%;
+}
+.last-item {
+  background-color: #1FA45B;
+  padding: 10px 12px;
+  border-radius: 6px;
+  margin-bottom: 106px;
+  filter: drop-shadow(2px 3px 6px rgba(6, 225, 105, 0.3));
+}
+.dua-icon {
+  filter: drop-shadow(2px 3px 6px rgba(6, 225, 105, 0.3));
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* Header TOP start */
+
+.header-box {
+  width: 89vw;
+  position: absolute;
+  top: 40px;
+  left: 160px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.header-user{
+    display: flex;
+    gap: 8px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* settings  */
+.settings-bar {
+  position: absolute;
+  right: 50px;
+  background-color: white;
+  padding: 64px 16px;
+  width: 300px;
+  border-radius: 24px;
+  top: 117px;
+  height: 84vh;
+}
+.head-text {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+.card-box {
+  display: flex;
+  background-color: #F7F8FA;
+  padding: 10px;
+  gap: 14px;
+  width: 267px;
+  border-radius: 10px;
+  align-items: center;
+}
+.left-icon {
+  background-color: #E8F0F5;
+  padding: 10px;
+  border-radius: 50%;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* active DuA */
+
+.wrapper{
+    position: absolute;
+    width: 1006px;
+    right: 355px;
+    top: 117px;
+}
+.wrapper::-webkit-scrollbar,
+.catagory-lists::-webkit-scrollbar{
+  width: 10px;
+}
+.wrapper::-webkit-scrollbar-track,
+.catagory-lists::-webkit-scrollbar-track{
+  background-color: #F3F4F6;
+}
+.wrapper::-webkit-scrollbar-thumb,
+.catagory-lists::-webkit-scrollbar-thumb{
+
+  background-color: #1FA45B;
+  border-radius: 10px;
+  background-clip: content-box;
+}
+.box-header {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+}
+.box-content span > p{
+  word-spacing: 8px;
+  line-height: 50px;
+}
+/* catagory section */
+
+.catagory-lists{
+  overflow-y: scroll;
+  height: 65vh;
+}
+
+.all-catagory {
+  position: absolute;
+  top: 117px;
+  left: 160px;
+  background-color: white;
+  height: 814px;
+  width: 360px;
+  border-radius: 10px;
+}
+.catagory-title {
+  background-color: #1FA45B;
+  padding: 20px;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 10px 10px 0px 0px;
+}
+.first-item {
+  background-color: #E8F0F5;
+  display: flex;
+  width: 333px;
+  margin: 0 auto;
+  border-radius: 7px;
+  padding: 12px;
+}
+.icon {
+  background-color: #F7F8FA;
+  padding: 10px;
+  border-radius: 7px;
+  margin-right: 10px;
+}
+.card-title p {
+  color: #7e7e7e;
+  font-size: 13px;
+  font-weight: 500;
+  margin-top: 3px;
+}
+.how-many-items {
+  margin-left: 63px;
+  flex-direction: column;
+  display: flex;
+  gap: 6px;
+  align-items: center;
+}
+.how-many-items span{
+  color: #7e7e7e;
+  font-size: 14px;
+}
+.sub-titles p {
+  font-size: 14px;
+  font-weight: 600;
+  position: relative;
+}
+
+.sub-titles {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 309px;
+  margin-left: auto;
+  padding-right: 16px;
+  border-left: 2px dotted #1FA45B;
+  padding-left: 23px;
+}
+
+.sub-titles p::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #1FA45B;
+  border-radius: 50%;
+  top: 7px;
+  right: 288px;
+}
+.default-card-section {
+  align-items: center;
+  background: transparent;
+  display: flex;
+  width: 333px;
+  margin: 0 auto;
+  justify-content: space-between;
+  border-radius: 7px;
+  padding: 12px;
+}
+.icon-svg {
+  display: flex;
+  gap: 10px;
+  width: 240px;
+}
+.svg-logo {
+  padding: 8px 10px;
+  background-color: #F7F8FA;
+  border-radius: 7px;
+}
+.card-title h5{
+  font-weight: 500;
+}
+
+.howManyItem {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  padding-right: 10px;
+  position: relative;
+}
+.howManyItem::before {
+  content: "";
+  width: 1px;
+  height: 53px;
+  background-color: #E8F0F5;
+  position: absolute;
+  right: 57px;
+}
+
+.howManyItem span {
+  font-size: 14px;
+  font-weight: 300;
+  color: #7e7e7e;
 }
